--- a/animation/loading1/loading1.html
+++ b/animation/loading1/loading1.html
@@ -6,7 +6,7 @@
 
         <title>Loading Animation 1</title>
 
-        <script src="../node_modules/animejs/lib/anime.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
 
 
         <link rel="stylesheet" href="loading1.css">
