--- a/animation/loading1/loading1.html
+++ b/animation/loading1/loading1.html
@@ -6,16 +6,47 @@
 
         <title>Loading Animation 1</title>
 
-        <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
+        <script src="../node_modules/animejs/lib/anime.min.js"></script>
 
 
         <link rel="stylesheet" href="loading1.css">
+        <!-- github rendering compat !-->
+        <style>
+            body {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 100vh;
+                background: #398f5a;
+            }
+
+            .loading {
+                position: relative;
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                width: 1px;
+                height: 100vh;
+            }
+
+            .el {
+                position: absolute;
+                opacity: .6;
+                width: 1px;
+                height: 24vh;
+                margin-top: -12vh;
+                transform-origin: 50% 100%;
+                background: white;
+            }
+        </style>
 
     </head>
 
     <body>
         <div class="loading"></div>
     </body>
+
     <script src="loading1.js"></script>
 
 
