rev [animation]: loading1 - more github rendering compat

--- a/animation/loading1/loading1.html
+++ b/animation/loading1/loading1.html
@@ -19,6 +19,8 @@
                 width: 99%;
                 height: 95vh;
                 background: #398f5a;
+                margin: 0;
+                padding: 0;
             }
 
             .loading {
