rev [pages]: rename breathingsphere to main

--- a/pages/main/main.html
+++ b/pages/main/main.html
@@ -9,7 +9,7 @@
         <script src="../../node_modules/animejs/lib/anime.min.js"></script>
 
 
-        <link rel="stylesheet" href="breathingsphere.css">
+        <link rel="stylesheet" href="main.css">
         <link href="https://fonts.googleapis.com/css?family=Public+Sans|Work+Sans&display=swap" rel="stylesheet">
 
     </head>
@@ -68,7 +68,7 @@
 
     </body>
 
-    <script src="breathingsphere.js"></script>
+    <script src="main.js"></script>
 
 
 </html>
