rev [pages]: use web-sourced anime.min.js for web rendering

--- a/pages/main/main.html
+++ b/pages/main/main.html
@@ -6,7 +6,7 @@
 
         <title>S P E C I F Y</title>
 
-        <script src="../../node_modules/animejs/lib/anime.min.js"></script>
+        <script src="https://github.com/juliangarnier/anime/blob/master/lib/anime.min.js"></script>
 
 
         <link rel="stylesheet" href="main.css">
