--- a/animation/loading2/loading2_soft.html
+++ b/animation/loading2/loading2_soft.html
@@ -6,7 +6,7 @@
 
         <title>Loading Animation 2</title>
 
-        <script src="../../node_modules/animejs/lib/anime.min.js"></script>
+        <script src="../node_modules/animejs/lib/anime.min.js"></script>
 
 
         <link rel="stylesheet" href="loading2.css">
